# packages/api/internal/handlers/template_start_build_v2.go
@@ -3,6 +3,7 @@ package handlers
 import (
 	"context"
 	"encoding/json"
+	"errors"
 	"fmt"
 	"net/http"
 	"strings"
@@ -177,8 +178,10 @@ func (a *APIStore) PostV2TemplatesTemplateIDBuildsBuildID(c *gin.Context, templa
 		build.RamMb,
 		body.ReadyCmd,
 		body.FromImage,
+		body.FromImageRaw,
 		body.FromTemplate,
 		body.FromImageRegistry,
+		body.OsType,
 		body.Force,
 		body.Steps,
 		clusters.WithClusterFallback(team.ClusterID),
@@ -195,6 +198,12 @@ func (a *APIStore) PostV2TemplatesTemplateIDBuildsBuildID(c *gin.Context, templa
 
 	if err != nil {
 		telemetry.ReportCriticalError(ctx, "build failed", err, telemetry.WithTemplateID(templateID))
+		var invalidRequestErr *api.InvalidRequestError
+		if errors.As(err, &invalidRequestErr) {
+			a.sendAPIStoreError(c, http.StatusBadRequest, invalidRequestErr.Error())
+
+			return
+		}
 		a.sendAPIStoreError(c, http.StatusInternalServerError, fmt.Sprintf("Error when starting template build: %s", err))
 
 		return
